<resources>
    <string name="app_name">OnlyVote</string>
    <string name="title_vote">Vote</string>
    <string name="title_candidates">Candidats</string>
    <string name="title_account">Compte</string>
    <string name="button_vote">Voter</string>
    <string name="onlyvote_logo">OnlyVote</string>
    <string name="button_male">Homme</string>
    <string name="button_female">Femme</string>
    <string name="plaintext_lastname">Nom</string>
    <string name="plaintext_firstname">Prénom</string>
    <string name="edittext_email">Adresse mail</string>
    <string name="edittext_phone">Numéro de téléphone</string>
    <string name="button_register">S\'enregistrer</string>
    <string name="button_date">01-01-1991</string>
    <string name="plaintext_date">Date de naissance :</string>
    <string name="plaintext_socialNumber">Numéro de sécurité social</string>
    <string name="textview_dptOfBirth">Département de naissance :</string>
    <string name="textview_cityOfBirth">Ville de naissance :</string>
    <string name="textview_save_vote">Sauvegarder</string>
    <string name="textview_select_vote">Sélectionnez votre choix</string>
    <string name="textview_info_vote">Si vous souhaitez voter vous devez dans un premier temps vous enregistrer sur la page d\'inscription. Si vous êtes déja inscris vous pouvez poursuivre sur cette page et enregistrer votre vote.</string>
    <string name="button_change_vote">Changer mon vote</string>
    <string name="button_send_code">Envoyer le code</string>
    <string name="text_view_info_send_code">Avant de valider votre vote nous avons besoin de vérifier votre identité, pour ce faire un code de vérification va être envoyé sur votre téléphone.</string>
    <string name="text_view_please_phone">Merci de reseigner le numéro de téléphone ci-dessous</string>
    <string name="text_view_disclaimer">Attention votre vote est définitif</string>
    <string name="button_validate">Valider mon vote</string>
    <string name="edit_text_hint_code">Entrez le code reçu</string>
</resources>