<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_vote">

    <fragment
        android:id="@+id/navigation_vote"
        android:name="com.example.onlyvote.ui.vote.VoteFragment"
        android:label="@string/title_vote"
        tools:layout="@layout/fragment_vote" />

    <fragment
        android:id="@+id/navigation_candidates"
        android:name="com.example.onlyvote.ui.candidates.CandidatesFragment"
        android:label="@string/title_candidates"
        tools:layout="@layout/fragment_candidates" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.onlyvote.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>